--- a/src/App.scss
+++ b/src/App.scss
@@ -58,7 +58,7 @@ svg {
 .container {
   margin: 0 auto;
   width: 100%;
-  max-width: 1280px;
+  max-width: 1100px;
 }
 .btn {
   border: none;
@@ -86,7 +86,7 @@ svg {
   width: 100%;
   display: grid;
   grid-gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   justify-items: center;
 }
 
@@ -97,7 +97,7 @@ svg {
   background: $navy-dark;
   max-width: 100vw;
   width: 100%;
-  height: 5rem;
+  height: 3.5rem;
   position: fixed;
   z-index: 10;
 
@@ -208,7 +208,7 @@ svg {
   box-shadow: 5 5px 100px $navy-light;
   &__img {
     width: 100%;
-    height: 300px;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -220,7 +220,7 @@ svg {
   }
 
   &__info {
-    height: 200px;
+    height: 175px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -231,19 +231,18 @@ svg {
       font-weight: $fw-sm;
       font-size: 1.25rem;
       color: $navy-dark;
-      height: 50%;
-      padding-top: 1rem;
+      height: 100px;
       &:hover {
         color: $primary;
       }
     }
 
     &-price {
-      height: 50%;
+      height: 75px;
       color: $navy-light;
       font-size: 2rem;
       font-weight: 900;
-      padding-bottom: 1rem;
+      margin-bottom: 2rem;
     }
   }
 
