--- a/src/App.scss
+++ b/src/App.scss
@@ -48,10 +48,8 @@ svg {
   max-width: 100vw;
   min-height: 100vh;
   overflow: hidden;
-  .content {
-    margin-top: 5rem;
-    padding: 1rem;
-  }
+  position: relative;
+  padding-top: 5rem;
 }
 
 //REUSABLES
@@ -59,6 +57,7 @@ svg {
   margin: 0 auto;
   width: 100%;
   max-width: 1100px;
+  position: relative;
 }
 .btn {
   border: none;
@@ -82,12 +81,187 @@ svg {
     cursor: pointer;
   }
 }
+
+.addToWishlist--filled {
+  color: $red;
+}
 .grid {
   width: 100%;
   display: grid;
   grid-gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   justify-items: center;
+}
+
+//product card
+.card {
+  width: 100%;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: $br-sm;
+  box-shadow: $bs-smooth;
+
+  padding: 1rem;
+  position: relative;
+  z-index: 0;
+
+  box-shadow: 5 5px 100px $navy-light;
+  &__img {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      max-height: 100%;
+      max-width: 100%;
+    }
+  }
+
+  &__info {
+    height: 175px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
+    &-name {
+      font-weight: $fw-sm;
+      font-size: 1.25rem;
+      color: $navy-dark;
+      height: 100px;
+      cursor: pointer;
+      &:hover {
+        color: $primary;
+      }
+    }
+
+    &-price {
+      height: 75px;
+      color: $navy-light;
+      font-size: 2rem;
+      font-weight: 900;
+      margin-bottom: 2rem;
+    }
+  }
+
+  &__btns {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+
+    .addToBasket {
+      width: 80%;
+      border-radius: 0 0 0 0.25rem;
+    }
+    .addToWishlist {
+      width: 20%;
+      border-radius: 0 0 0.25rem 0;
+
+      &:active {
+        svg {
+          transform: scale(1.25);
+        }
+      }
+    }
+  }
+}
+
+.modal {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 10;
+
+  animation: fade-in 100ms;
+  display: flex;
+  justify-content: center;
+  background: rgba($black, 0.75);
+  align-items: center;
+  margin-top: -5rem;
+
+  &__inner {
+    width: 100%;
+    height: 100%;
+    max-height: 50rem;
+    max-width: 70rem;
+    background: $white;
+    border-radius: $br-md;
+    box-shadow: $bs-smooth;
+    position: relative;
+
+    animation: rise 0.3s forwards;
+    animation-delay: 200ms;
+    opacity: 0;
+
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, auto);
+    overflow-y: scroll;
+    padding: 1rem;
+    padding-top: 4rem;
+
+    &-title {
+      font-size: 1rem;
+      color: $navy-dark;
+    }
+
+    &-img {
+      grid-column: 1;
+      grid-row: 2;
+      width: 100%;
+      max-width: 15rem;
+      margin: 0 auto;
+    }
+
+    &-desc {
+      color: $navy-light;
+    }
+
+    &-btns {
+      display: flex;
+
+      input {
+        text-align: center;
+        padding: 1rem;
+      }
+
+      //Hide arrows from input
+      /* Chrome, Safari, Edge, Opera */
+      input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+      /* Firefox */
+      input[type="number"] {
+        -moz-appearance: textfield;
+      }
+    }
+
+    &-close {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      font-size: 3rem;
+      color: $navy-dark;
+      z-index: 100;
+      pointer-events: all;
+      transition: transform 0.1s ease;
+
+      &:hover {
+        cursor: pointer;
+        transform: scale(0.9);
+      }
+    }
+  }
 }
 
 //ELEMENTS
@@ -99,6 +273,7 @@ svg {
   width: 100%;
   height: 3.5rem;
   position: fixed;
+  top: 0;
   z-index: 10;
 
   h1 {
@@ -191,108 +366,6 @@ svg {
   }
 }
 
-//product card
-.card {
-  width: 100%;
-  background: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: $br-sm;
-  box-shadow: $bs-smooth;
-
-  padding: 1rem;
-  position: relative;
-  z-index: 0;
-
-  box-shadow: 5 5px 100px $navy-light;
-  &__img {
-    width: 100%;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    img {
-      max-height: 100%;
-      max-width: 100%;
-    }
-  }
-
-  &__info {
-    height: 175px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-
-    &-name {
-      font-weight: $fw-sm;
-      font-size: 1.25rem;
-      color: $navy-dark;
-      height: 100px;
-      &:hover {
-        color: $primary;
-      }
-    }
-
-    &-price {
-      height: 75px;
-      color: $navy-light;
-      font-size: 2rem;
-      font-weight: 900;
-      margin-bottom: 2rem;
-    }
-  }
-
-  &__btns {
-    display: flex;
-    width: 100%;
-    height: 50px;
-    position: absolute;
-    bottom: 0;
-
-    .addToBasket {
-      width: 80%;
-      border-radius: 0 0 0 0.25rem;
-    }
-    .addToWishlist {
-      width: 20%;
-      border-radius: 0 0 0.25rem 0;
-
-      &--filled {
-        color: $red;
-      }
-
-      &:active {
-        svg {
-          transform: scale(1.25);
-        }
-      }
-    }
-  }
-}
-
-//product details page
-.item {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1;
-  grid-template-rows: repeat(3, auto);
-  grid-gap: 1rem;
-  padding: 2rem;
-
-  &__title {
-    grid-row: 1;
-  }
-
-  &__img {
-    grid-row: 2;
-    max-width: 100%;
-  }
-}
-
 .spinner {
   width: 100px;
   height: 100px;
@@ -330,6 +403,49 @@ svg {
     right: 1rem;
     box-shadow: $bs-smooth;
   }
+
+  // .item {
+  //   grid-template-columns: 30% 70%;
+  //   grid-template-rows: auto auto 3rem 3rem;
+  //   grid-gap: 10px;
+
+  //   &__title {
+  //     grid-column: 2;
+  //     grid-row: 1;
+  //   }
+  //   &__img {
+  //     grid-column: 1;
+  //     grid-row: 1/5;
+  //     max-height: 100%;
+  //     max-width: 100%;
+  //   }
+  //   &__desc {
+  //     grid-column: 2;
+  //     grid-row: 2;
+  //   }
+  //   &__add {
+  //     grid-column: 2;
+  //     grid-row: 3;
+  //     height: 100%;
+
+  //     .btn {
+  //       width: 3rem;
+  //       &--primary {
+  //         width: 5rem;
+  //         margin-left: 0.25rem;
+  //       }
+  //     }
+  //     input {
+  //       width: 5rem;
+  //     }
+  //   }
+  //   .wishlistAdd {
+  //     grid-column: 2;
+  //     grid-row: 4;
+  //     height: auto;
+  //     width: 16.25rem;
+  //   }
+  // }
 }
 //lg
 @media (min-width: 1024px) {
@@ -365,5 +481,14 @@ svg {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
