--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;800&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 //VARIABLES
@@ -13,7 +13,7 @@ $primary: #f0a500;
 $navy-light: #334756;
 $navy-dark: #082032;
 $black: #000000;
-$white: #fef1e6;
+$white: #f7f7f7;
 $red: #eb4034;
 
 //borders & shadows
@@ -87,10 +87,13 @@ svg {
 }
 .grid {
   width: 100%;
+  max-width: 95vw;
+  margin: 0 auto;
   display: grid;
-  grid-gap: 2rem;
+  grid-gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   justify-items: center;
+  padding-bottom: 2rem;
 }
 
 //product card
@@ -101,7 +104,7 @@ svg {
   flex-direction: column;
   align-items: center;
   border-radius: $br-sm;
-  box-shadow: $bs-smooth;
+  // box-shadow: $bs-smooth;
 
   padding: 1rem;
   position: relative;
@@ -128,6 +131,7 @@ svg {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    margin-top: 1rem;
 
     &-name {
       font-weight: $fw-sm;
@@ -190,7 +194,7 @@ svg {
     width: 100%;
     height: 100%;
     max-height: 50rem;
-    max-width: 70rem;
+    max-width: 90vw;
     background: $white;
     border-radius: $br-md;
     box-shadow: $bs-smooth;
@@ -205,12 +209,12 @@ svg {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(5, auto);
     overflow-y: scroll;
-    padding: 1rem;
-    padding-top: 4rem;
+    padding: 4rem 1rem 1rem 1rem;
 
     &-title {
-      font-size: 1rem;
+      font-size: 1.25rem;
       color: $navy-dark;
+      margin: 0 auto;
     }
 
     &-img {
@@ -223,10 +227,14 @@ svg {
 
     &-desc {
       color: $navy-light;
+      margin: 0 auto;
+      max-width: 90%;
+      text-align: center;
     }
 
     &-btns {
       display: flex;
+      margin: 0 auto;
 
       input {
         text-align: center;
@@ -241,7 +249,7 @@ svg {
         margin: 0;
       }
       /* Firefox */
-      input[type="number"] {
+      input[type='number'] {
         -moz-appearance: textfield;
       }
     }
@@ -259,6 +267,38 @@ svg {
       &:hover {
         cursor: pointer;
         transform: scale(0.9);
+      }
+    }
+
+    @media (min-width: 70rem) {
+      max-width: 70rem;
+    }
+    @media (min-width: 768px) {
+      grid-template-columns: 40% 60%;
+      grid-template-rows: 100px 300px 100px;
+      grid-gap: 0;
+
+      .modal__inner-title {
+        grid-column: 2;
+        grid-row: 1;
+        margin: 0;
+        height: 100px;
+      }
+      .modal__inner-img {
+        grid-column: 1;
+        grid-row: 2;
+        display: flex;
+        align-items: end;
+      }
+      .modal__inner-desc {
+        grid-column: 2;
+        grid-row: 2;
+        margin: 0;
+      }
+      .modal__inner-btns {
+        grid-column: 2;
+        grid-row: 3;
+        margin: 0;
       }
     }
   }
@@ -403,49 +443,6 @@ svg {
     right: 1rem;
     box-shadow: $bs-smooth;
   }
-
-  // .item {
-  //   grid-template-columns: 30% 70%;
-  //   grid-template-rows: auto auto 3rem 3rem;
-  //   grid-gap: 10px;
-
-  //   &__title {
-  //     grid-column: 2;
-  //     grid-row: 1;
-  //   }
-  //   &__img {
-  //     grid-column: 1;
-  //     grid-row: 1/5;
-  //     max-height: 100%;
-  //     max-width: 100%;
-  //   }
-  //   &__desc {
-  //     grid-column: 2;
-  //     grid-row: 2;
-  //   }
-  //   &__add {
-  //     grid-column: 2;
-  //     grid-row: 3;
-  //     height: 100%;
-
-  //     .btn {
-  //       width: 3rem;
-  //       &--primary {
-  //         width: 5rem;
-  //         margin-left: 0.25rem;
-  //       }
-  //     }
-  //     input {
-  //       width: 5rem;
-  //     }
-  //   }
-  //   .wishlistAdd {
-  //     grid-column: 2;
-  //     grid-row: 4;
-  //     height: auto;
-  //     width: 16.25rem;
-  //   }
-  // }
 }
 //lg
 @media (min-width: 1024px) {
