--- a/src/styles/_categories.scss
+++ b/src/styles/_categories.scss
@@ -1,14 +1,32 @@
-.filters {
-  font-size: 2rem;
-  border-radius: 0.25rem;
-  padding: 0.5rem;
-  border: none;
-  background: $primary;
-  color: $white;
-  margin-bottom: 1rem;
-  cursor: pointer;
-  option {
-    background: $white;
-    color: $navy-dark;
+.filter {
+  .container {
+    padding-left: 0;
+    @include media(md) {
+      padding-left: 0.5rem;
+    }
+    @include media(xl) {
+      padding-left: 0;
+    }
+    .filters {
+      font-size: 1.5rem;
+      border-radius: 0.25rem;
+      border: none;
+      text-align: center;
+      padding: 0.5rem;
+      background: $primary;
+      color: $white;
+      margin-bottom: 1rem;
+      width: 100%;
+      max-width: 95vw;
+      cursor: pointer;
+      @include media(md) {
+        width: 30rem;
+        text-align: left;
+      }
+      option {
+        background: $white;
+        color: $navy-dark;
+      }
+    }
   }
 }
