--- a/src/styles/_reusables.scss
+++ b/src/styles/_reusables.scss
@@ -2,7 +2,11 @@
 .container {
   margin: 0 auto;
   width: 100%;
-  max-width: 1100px;
+  max-width: 95vw;
+  @include media(md) {
+    max-width: 940px;
+  }
+
   position: relative;
 }
 .btn {
